changed max-width to min-width to prevent too small popovers

--- a/app/styles/tink/_popovers.scss
+++ b/app/styles/tink/_popovers.scss
@@ -15,7 +15,7 @@
   font-weight: normal;
   line-height: $line-height-base;
 
-  max-width: rem($popover-max-width);
+  min-width: rem($popover-width);
   padding: rem($popover-padding);
   position: relative; //absolute;
   white-space: normal; // Overrides for proper insertion
